main.css
   /* Global Layout Set-up */
 * {
  box-sizing: border-box;
}

body {
  margin: 0 auto;
  width: 100%;
  padding: 0;
  text-align: center;
  font-family: 'Titillium Web', sans-serif;
  color: #222;
  background: #fafafa;
}

h1 {
  color: #4a4a4a;
  font-size: 1.5em;
  font-weight: 600;
}

h2 {
  color: #4a4a4a;
  font-size: 1.2em;
}

h3 {
  color: #4a4a4a;
  font-size: 1.2em;
  text-transform: uppercase;
  margin-top: 3em;
  padding: 20px;
}

h4 {
  color: #4a4a4a;
  font-size: 1em;
  text-align: left;
  padding: 10px;
  margin-left: .5em;
  float: left;
}

footer a.backtotop {
  color: #4a4a4a;
  font-size: 1em;
  text-align: left;
  padding: 10px;
  margin-left: 7em;
  text-transform: uppercase;
}


p {
  color: #737373;
  font-size: 1em;
  line-height: 1.5em;
  text-align: center;
  width: 90%;
  margin: 0 auto;
  padding: 5px;
}

hr {
  color: darkgrey;
  width: 90%;
}

a {
  text-decoration: none;
  color: #737373;
  font-weight: 600;
}


/********************************
Mobile First Approach - Default Styles
********************************/
.main-nav li {
  display: block;
  width: 90%;
  color: #4a4a4a;
  font-weight: 600;
  background-color: #fff;
  border-radius: 2px;
  padding: 10px;
  text-decoration: none;
  margin-bottom: 5px;
  text-transform: uppercase;
}

h2.portfolio-heading {
  padding-top: 60px;
  margin-top: 20px;
  margin: 0 auto;
  text-transform: uppercase;
}

img.image-block {
  width: 100%;
  margin: 0 auto;
}

img.profile-image {
  width: 70%;
  margin: 0 auto;
  margin-top: 4em;
  margin-bottom: 2em;
}

header {
  background-color: #fafafa;
  margin-bottom: 5em;
}

footer {
  background-color: #fafafa;
  margin-top: 3em;
}

footer li {
  display: block;
  text-decoration: none;
  color: #4a4a4a;
  padding: 5px;
  margin: 0 auto;
}

footer ul {
  border-bottom: 1px solid lightgray;
  width: 90%;
  margin: 0 auto;
}

.main-block {
  width: 90%;
  padding: 3px;
  margin: 0 auto;
  display: block;
}

.content {
  background-color: #fff;
  width: 100%;
  margin: 0 auto;
}



/********************************
 Header Styles
 ********************************/


/********************************
Media Queries and Breaks: Set @ 768 px and 1024 px
********************************/

@Media (min-width: 768px) {

  body {
    margin: 0 auto;
    width: 100%;
    padding: 0;
    text-align: center;
    font-family: 'Titillium Web', sans-serif;
    color: #222;
    background: #fafafa;
  }

  header,
  footer {
    margin: 0 auto;
    width: 100%;
    padding: 0;
    text-align: center;
    font-family: 'Titillium Web', sans-serif;
    color: #222;
    background: #fafafa;
    display: inline-block;
  }

  .content {
    width: 80%;
    margin: 0 auto;
  }

  .main-block {
    width: 49%;
    padding: 15px;
    margin: 0 auto;
    display: inline-block;
  }

  p.introduction-paragraph {
    max-width: 768px;
    padding: 20px;
    float: left;
    width: 60%;
    text-align: justify;
  }

  .main-nav {
      margin-top: 2em;
  }

  .main-nav li {
      display: block;
      width: 90%;
      color: #4a4a4a;
      background-color: #fafafa;
      font-weight: 600;
      border-radius: 2px;
      padding: 10px;
      display: inline;
      margin: 1.5em;
      text-decoration: none;
      text-transform: uppercase;
    }

    img.profile-image {
      width: 30%;
      float: right;
      margin-left: 5%;
    }

}

@Media (min-width: 1024px) {

  div.header-content {
    max-width: 1300px;
    display: inline-block;
    text-align: center;
  }

  .main-block {
    width: 30%;
    padding: 15px;
    margin: 0 auto;
    display: inline-block;
  }

}

